# MechanicalManim

./: .gitignore  README.md  coriolis_acc1 copy.ipynb  coriolis_acc1.ipynb  pyproject.toml
Control/: polar-plot.py  pp1.py  pp2.py  pyproject.toml  rl3.py  rootlocus.py  rootlocus2.py
Dynamics/: KutzbachCriterion.py  MechanismVelocity.py  OffsetSliderCrank.py  VelocityPolygon.py  cam_design.py  gear.py  gear_class.py  gear_design.py  main.py  manim.cfg  offsetSliderCrank2.py  pendelum.md  pendelum.py
Dynamics/media/Tex/: 1ba28791934a9fc6.dvi
Dynamics/media/videos/MechanismVelocity/480p15/: manimViewer.json
Dynamics/media/videos/cam_design/480p15/: manimViewer.json
Dynamics/media/videos/cam_follower/480p15/: manimViewer.json
Dynamics/media/videos/gear_class/480p15/: manimViewer.json
Dynamics/media/videos/gear_design/480p15/: manimViewer.json
Fluid/: blade.py  simulation.py
Math/: idea.py
Statics/: derivation.py  fbd.py  main.py  sigma_vs_theta.py  sigma_vs_theta_manim.py  stress_transformation_2d.py
Thermodynamics/: main.py
Tutorial/: add_voiceover.py  advanced_animations.py  custom.py  geometry.py  merge_audio.py  record_voice.py  text.py  voice.py
Tutorial/media/: 3dscene.py
fem/: advanced_meshing.py  basic_term.py  domain_2d_enhanced.py  mesh_examples.py  script.md
figure/: fig.py
tmm/: a1.py  a2.py  a3.py  acc-diag.py  balance.py  dof.py  manim.cfg  mechanism.py  q1.py  quick-guid.md  veldiag copy 2.py  veldiag copy.py  veldiag-ai.md  veldiag.py  veldiag_v-ai.py
tmm/geaar/: mesh-matplotlib.py  mesh_manim.py
(+23 files in other folders)
