[project]
name = "manimations"
version = "0.1.0"
description = "Mechanical engineering animations using Manim Community for visualizing dynamics, statics, mechanisms, and more"
readme = "README.md"
authors = [{name = "Sewak"}]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "manim>=0.20.1",
]
